# scoring_module

./: Readme.md  main.py  player_events.txt  player_score.txt  pyproject.toml  tournamet_events.txt
entities/: player.py
scoring_engine/: game.py  sample_tennis_game_runnner.py
utils/: log.py
