[tool.poetry]
name = "scoring_module"
version = "0.1.0"
description = ""
authors = ["dharmesh-doxel <81106621+dharmesh-doxel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
